--- a/learn-quran.html
+++ b/learn-quran.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <div class="main-video">
-            <video src="/media/নবী এবং রাসুলদের ধারাবাহিক জীবনী _ Prophets Series _ মিজানুর রহমান আজহারি(1080P_HD).mp4" controls muted autoplay></video>
+            <video src="/media/GI4vfKGZpmslAJFIwxfIdpuGCpE.mp4 " controls muted autoplay></video>
             <h3 class="title">Quran School Class No: 01</h3>
         </div>
 
